--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
       </section>
       <!-- Content section with recipes -->
-      <section class="box-recipes">
+      <section id="list-recipes" class="box-recipes">
         <section class="card-recipe">
           <figure>
             <img src="./medias/Recette-pâtes-carbonara-au-thermomix.jpg" alt="" />
@@ -372,5 +372,7 @@
     <script src="JavaScript/dropdownBtnIngredients.js"></script>
     <script src="JavaScript/dropdownBtnAppareil.js"></script>
     <script src="JavaScript/dropdownBtnUstensiles.js"></script>
+    <script src="./JavaScript/main.js"></script>
+    <script src="JavaScript/dataApi.js"></script>
   </body>
 </html>
