changement du lien vers le main.js

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </main>
 
     <!-- script link -->
-    <script type="module" src="./JavaScript/main.js" async></script>
+    <script type="module" src="../JavaScript/main.js" async></script>
 
   </body>
 </html>
