changement des liens pour affichage git hub pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="dropdown-appareil">
-          <button onclick="myFunctionAppareil()" class="dropbtn dropbtn-appareil">
+          <button  class="dropbtn dropbtn-appareil">
             <input
               type="text"
               placeholder="Appareil"
@@ -72,7 +72,7 @@
         </div>
 
         <div class="dropdown-ustensiles">
-          <button onclick="myFunctionUstensiles()" class="dropbtn dropbtn-ustensiles">
+          <button  class="dropbtn dropbtn-ustensiles">
             <input
               type="text"
               placeholder="Ustensiles"
@@ -98,7 +98,7 @@
     </main>
 
     <!-- script link -->
-    <script type="module" src="../JavaScript/main.js" async></script>
+    <script type="module" src="JavaScript/main.js" async></script>
 
   </body>
 </html>
