initialisation des btn dropdown

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- Section BTN filter -->
       <section class="section-btn-filter">
         <div class="dropdown-ingredients">
-          <button  class="dropbtn">
+          <button  class="dropbtn1">
             <input
               type="text"
               placeholder="Ingredients"
@@ -52,7 +52,7 @@
         </div>
 
         <div class="dropdown-appareil">
-          <button  class="dropbtn dropbtn-appareil">
+          <button  class="dropbtn2 dropbtn-appareil">
             <input
               type="text"
               placeholder="Appareil"
@@ -61,18 +61,12 @@
             />
           </button>
           <div id="myDropdownAppareil" class="dropdown-content-appareil">
-            <a href="#about">About</a>
-            <a href="#base">Base</a>
-            <a href="#blog">Blog</a>
-            <a href="#contact">Contact</a>
-            <a href="#custom">Custom</a>
-            <a href="#support">Support</a>
-            <a href="#tools">Tools</a>
+            <!-- Contenu dynamique -->
           </div>
         </div>
 
         <div class="dropdown-ustensiles">
-          <button  class="dropbtn dropbtn-ustensiles">
+          <button  class="dropbtn3 dropbtn-ustensiles">
             <input
               type="text"
               placeholder="Ustensiles"
@@ -81,13 +75,7 @@
             />
           </button>
           <div id="myDropdownUstensiles" class="dropdown-content-ustensiles">
-            <a href="#about">About</a>
-            <a href="#base">Base</a>
-            <a href="#blog">Blog</a>
-            <a href="#contact">Contact</a>
-            <a href="#custom">Custom</a>
-            <a href="#support">Support</a>
-            <a href="#tools">Tools</a>
+            <!-- Contenu dynamique -->
           </div>
         </div>
       </section>
